Started adding a sql Database which will log everything so we can later more easily access our data